Modificacion 1 Santos Mejia

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,6 +13,6 @@ nav:
     - Colaborativas:
         - Tema : prueba.md
     - EJEMPLOS:
-        - Ejemplo: prueba2.md
+        - Ejemplo: colaborativo/prueba2.md
 copyright: ©GMDXX
 site_author: GMDXX
